<resources>
    <string name="app_name">IPMS</string>
    <string name="version">"version"</string>
    <string name="app_title">IPMS-DRISHTI-STANDARD-V30</string>
    <string name="submit_button">Submit</string>
    <string name="map">map</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="completed_survey">Completed Survey</string>
    <string name="synced_survey">Synced Survey</string>
    <string name="survey_point">Map</string>
    <string name="logout">Logout</string>
    <string name="fetch_survey_points">Get Survey Points</string>
    <string name="server_survey_details">Server Survey Details</string>
    <string name="daily_report">Daily Report</string>
    <string name="api_default_error">Server down please try again later.</string>
    <string name="connection_error">No internet connection.</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="retry">Retry</string>
    <string name="cmn_next_button">Submit</string>
    <string name="cmn_partial_save_button">Save</string>
    <string name="cmn_save_button">Save</string>
    <string name="cmn_go_back">Go Back</string>
    <string name="cmn_exit_survey">Exit Survey</string>
    <string name="cmn_complete_survey_button">Complete Survey</string>
    <string name="cmn_submit_survey_button">Submit Survey</string>
    <string name="cmn_edit">Edit</string>
    <string name="cmn_yes">YES</string>
    <string name="cmn_no">NO</string>
    <string name="cmn_nr">NR</string>
    <string name="cmn_na">NA</string>
    <string name="cmn_no_land">NO LAND</string>
    <string name="cmn_delete">Delete</string>
    <string name="cmn_near_na">NA NEAR</string>
    <string name="cmn_near_nr">NR NEAR</string>
    <string name="cmn_near_clear">CLEAR</string>
    <string name="cmn_warning">Warning</string>
    <string name="cmn_continue">Continue Survey</string>
    <string name="cmn_change">Change Data</string>
    <string name="cmn_check_btn_title">CHECK</string>
    <string name="cmn_no_value">NO VALUE</string>
    <string name="cmn_confirm">CONFIRM</string>
    <string name="cmn_cancel">CANCEL</string>
    <string name="cmn_close">Close</string>
    <string name="cmn_video">VIDEO</string>
    <string name="cmn_clear">Clear</string>
    <string name="cmn_count">TOTAL COUNT : </string>
    <string name="cmn_completed">COMPLETED</string>
    <string name="msg_building_id">Building Id already exist, Do you want to edit the existing survey ?</string>
    <string name="msg_building_id_exist_on_server">Building Id already exist in server, Please check the data ?</string>
    <string name="msg_change_point_status">Are you sure you want to remove this survey ?</string>
    <string name="msg_change_floor_count">Are you sure to change floor Count ?</string>
    <string name="msg_change_property_count">താങ്കൾക് പ്രോപ്പർട്ടി ഡിലീറ്റ് ചെയ്യണമെങ്കിൽ സർവ്വേ പേജിൽ നിന്നും ഡിലീറ്റ് ചെയ്‌യേണ്ടത് ആണ്</string>
    <string name="msg_delete_property_alert">Are you really want to delete this property ?</string>
    <string name="msg_edit_property_alert">Are you really want to edit this property ?</string>
    <string name="msg_edit_survey_alert">Are you really want to edit this survey ?</string>
    <string name="msg_edit_success">Successfully added to partial survey</string>
    <string name="msg_not_change_location">Can\'t able to edit selected Location ?</string>
    <string name="msg_change_building_status">Are you sure to change Building Status ?</string>
    <string name="msg_change_door_status">Are you sure to change Door Status ?</string>
    <string name="msg_change_building_sub_type">Are you sure to change Building Sub Type ?</string>
    <string name="msg_no_member">Are you sure there is no members ?</string>
    <string name="msg_change_location">Are you sure to change Location ?</string>
    <string name="msg_go_back_survey">The entered survey details will be lost, Are you sure do you want to go back?</string>
    <string name="msg_live_hood_lack_of_water_warning">വാട്ടർ കണക്ഷൻ NO എന്നും കിണറിലെ വെള്ളത്തിന്റെ ലഭ്യത SEASONAL  ആയിട്ടും കുടിവെള്ളത്തിന്റെ ലഭ്യത കുറവ്  NO അഥവാ ഇല്ല  എന്നാണ് കൊടുത്തിരിക്കുന്നത്. കൊടുത്തിരിക്കുന്നത് ശരിയായ ഉത്തരങ്ങൾ അല്ല എങ്കിൽ ആവിശ്യമായ മാറ്റങ്ങൾ വരുത്തുക.</string>
    <string name="msg_livehood_card_white_warning">റേഷൻ കാർഡ് നിറം വെള്ളയും Latrine/Bathroom/Electricity എന്നത് No എന്നും ആണ് കൊടുത്തിരിക്കുന്നത് . ഡാറ്റ ശെരിയാണോ എന്നെ ഉറപ്പ്  വരുത്തുക.</string>
    <string name="msg_livehood_card_yellow_pink_warning">റേഷൻ കാർഡ് നിറം പിങ്ക് / മഞ്ഞ  എന്നതും AC ഉണ്ട്  എന്നും ആണ് കൊടുത്തിരിക്കുന്നത് . ഡാറ്റ ശെരിയാണോ എന്നെ ഉറപ്പ്  വരുത്തുക.</string>
    <string name="msg_select_ward_no_aert">Please select ward number from settings</string>
    <string name="no_data">No server survey data available</string>
    <string name="toolbar_home">@string/app_name</string>
    <string name="toolbar_map">Map</string>
    <string name="toolbar_point_status">Point Status</string>
    <string name="toolbar_floor_count">Floor Details</string>
    <string name="toolbar_ground_floor_selection">Building Layout</string>
    <string name="toolbar_survey_grid">Survey</string>
    <string name="toolbar_property">Property Details</string>
    <string name="toolbar_owner">Owner Details</string>
    <string name="toolbar_location">Location Details</string>
    <string name="toolbar_images">Common Details</string>
    <string name="toolbar_road">Road Details</string>
    <string name="toolbar_establishment">Establishment Details</string>
    <string name="toolbar_live_hood">Livelihood Details</string>
    <string name="toolbar_more">More Details</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_sync_grid">Sync</string>
    <string name="toolbar_sync_list">Sync</string>
    <string name="toolbar_basement">Basement Area</string>
    <string name="toolbar_member">Member Details</string>
    <string name="toolbar_building">Building Details</string>
    <string name="toolbar_tax">Tax Details</string>
    <string name="toolbar_selection"></string>
    <string name="toolbar_tenant">Tenant Details</string>
    <string name="toolbar_survey_list">Surveys</string>
    <string name="toolbar_completed_list">Completed Surveys</string>
    <string name="toolbar_synced_list">Synced Surveys</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_about">About Us</string>
    <string name="toolbar_server_survey">Server Survey Details</string>
    <string name="toolbar_survey_point">Map</string>
    <string name="toolbar_complete_survey">Survey Details</string>
    <string name="toolbar_surveyor">Surveyor</string>
    <string name="toolbar_daily_report">Daily Report</string>
    <string name="toolbar_utility">Utility Dashboard</string>
    <string name="toolbar_utility_bridge">Bridge Details</string>
    <string name="toolbar_utility_bus_stop">Bus Stop Details</string>
    <string name="toolbar_utility_canal">Canal Line Details</string>
    <string name="toolbar_utility_culvert">Culvert Details</string>
    <string name="toolbar_utility_divider">Divider Details</string>
    <string name="toolbar_utility_drainage">Drainage Details</string>
    <string name="toolbar_utility_garbage_point">Garbage Point Details</string>
    <string name="toolbar_utility_high_mast">High Mast Light Details</string>
    <string name="toolbar_utility_low_mast">Low Mast Light Details</string>
    <string name="toolbar_utility_park">Park Details</string>
    <string name="toolbar_utility_parking">Parking Area Details</string>
    <string name="toolbar_utility_playground">Playground Details</string>
    <string name="toolbar_utility_pond">Pond Details</string>
    <string name="toolbar_utility_road">Road Details</string>
    <string name="toolbar_utility_junction">Road Junction Details</string>
    <string name="toolbar_utility_side_walk">Road Side Walk Details</string>
    <string name="toolbar_utility_signboard">Road Signboard Details</string>
    <string name="toolbar_utility_stadium">Stadium Details</string>
    <string name="toolbar_utility_street_light">Street Light Details</string>
    <string name="toolbar_utility_street_tap">Street Tap Details</string>
    <string name="toolbar_utility_tank">Tank Details</string>
    <string name="toolbar_utility_taxi_stand">Taxi Stand Details</string>
    <string name="toolbar_utility_transformer">Transformer Details</string>
    <string name="toolbar_utility_well">Well Details</string>
    <string name="login_title">Login</string>
    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_reset">Reset Password</string>
    <string name="forgot_password_email">Email Address</string>
    <string name="serverurl_title">Server URL</string>
    <string name="serverurl_verify">Verify</string>
    <string name="serverurl_hint">Enter server URL</string>
    <string name="serverurl_port">Enter port number</string>
    <string name="profile_surveyor_name">Surveyor Name</string>
    <string name="profile_mobile_code">Mobile Code</string>
    <string name="profile_surveyor_id">Surveyor ID</string>
    <string name="profile_reporting_to">Reporting To</string>
    <string name="profile_assigned_code">Assigned Code</string>
    <string name="map_dialog_title">COLOUR CODE</string>
    <string name="map_dialog_border_colour">BORDER COLOUR</string>
    <string name="map_dialog_db_point">POINT FROM MOBILE DEVICE</string>
    <string name="map_dialog_server_point">POINT FROM SERVER</string>
    <string name="map_dialog_inner_colour">INNER COLOUR AND SHAPES</string>
    <string name="map_dialog_dc_gl">DOOR CLOSED/GATE LOCKED</string>
    <string name="map_dialog_nc">NON COORPERATION</string>
    <string name="map_dialog_do">DOOR OPEN</string>
    <string name="map_dialog_PDC">PERMANENT DOOR CLOSED</string>
    <string name="map_dialog_unwanted">UNWANTED</string>
    <string name="map_dialog_demolished">DEMOLISHED</string>
    <string name="map_dialog_landmark">LANDMARK</string>
    <string name="map_dialog_unusable">UNUSABLE</string>
    <string name="map_dialog_na">NA</string>
    <string name="ward_selection_title">Select wards for getting server survey points (Maximum 4 wards)</string>
    <string name="ward_selection_list_empty_error">Select atleast one ward</string>
    <string name="ward_selection_list_exceed_error">More than 4 wards selection not allowed</string>
    <string name="ward_selection_alert">Do you want to add more wards for getting survey points</string>
    <string name="ward_selection_error">Please select ward for getting survey points</string>
    <string name="ward_selection_hint">Selected ward for survey : </string>
    <string name="home_assigned">Assigned</string>
    <string name="home_completed">Completed</string>
    <string name="home_partial_survey">Are you ready to start Partial Survey</string>
    <string name="home_new_survey">Are you ready to start New Survey</string>
    <string name="home_err_district">Please select District / Localbody / Ward Number from settings.</string>
    <string name="home_err_tpk">Please select TPK file from settings.</string>
    <string name="property_owner_details">Owner Details</string>
    <string name="property_owner_rd_1">Owner details same in both AR and field</string>
    <string name="property_owner_rd_2">Owner details changed in field</string>
    <string name="property_owner_rd_3">Owner details not in AR</string>
</resources>