<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/std_space_normal">

    <TextView
        android:id="@+id/textviewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_medium"
        android:gravity="center"
        android:text="@string/map_dialog_title"
        android:textSize="@dimen/std_txt_medium_x"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_medium"
        android:text="@string/map_dialog_border_colour"
        android:textSize="@dimen/std_space_normal"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_medium"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:src="@drawable/map_circle_db_point"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/map_circle_db_point"
            android:drawablePadding="@dimen/std_txt_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_db_point"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:src="@drawable/map_circle_server_point"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/map_circle_db_point"
            android:drawablePadding="@dimen/std_txt_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_server_point"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_medium"
        android:text="@string/map_dialog_inner_colour"
        android:textSize="@dimen/std_space_normal"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_medium"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_unwanted"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_unwanted"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_landmark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_landmark"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_demolished"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_demolished"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_unusable"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_unusable"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_do"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_do"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_pdc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_PDC"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_dcgl"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_dc_gl"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_nc"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_nc"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/std_space_small"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/std_space_semi"
            android:layout_height="@dimen/std_space_semi"
            android:layout_gravity="center_vertical"
            android:background="@drawable/map_point_na"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/std_space_small"
            android:gravity="center_vertical"
            android:text="@string/map_dialog_na"
            android:textSize="@dimen/std_space_normal" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cmnNextButtonColor"
        android:padding="@dimen/std_space_small"
        android:paddingTop="@dimen/std_space_medium"
        android:text="@string/cmn_close"
        android:layout_marginTop="@dimen/std_space_medium"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/std_txt_medium_xx" />

</LinearLayout>